--- a/DeedDescriptor/Components/CurveComponent.razor
+++ b/DeedDescriptor/Components/CurveComponent.razor
@@ -5,7 +5,7 @@
         <RadzenText TextStyle="TextStyle.H6" TagName="TagName.H5" class="rz-color-on-secondary-lighter">Curve</RadzenText>
     </ShapeType>
     <MainContent>
-        <RadzenRow>
+        <RadzenRow AlignItems="AlignItems.Center">
             <RadzenColumn Size="4" SizeMD="6" SizeLG="2">
                 <RadzenText TextStyle="TextStyle.H6" TagName="TagName.H5" class="rz-mb-0">Arc</RadzenText>
                 <RadzenText TextStyle="TextStyle.Body1">@(Curve.Arc.ToString())</RadzenText>
